[gd_scene load_steps=11 format=3 uid="uid://col3falvg0fba"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_hcyje"]
[ext_resource type="PackedScene" uid="uid://cqpjwcfyotg33" path="res://scenes/status_portrait.tscn" id="2_nsu6t"]
[ext_resource type="Texture2D" uid="uid://ccfw5dkokcbig" path="res://graphics/ui/Wenrexa Hand Gesture of Power.png" id="3_42ddj"]
[ext_resource type="PackedScene" uid="uid://ha8b36bvfouy" path="res://scenes/status_bar.tscn" id="3_pk6e7"]
[ext_resource type="PackedScene" uid="uid://diwmm4s004qg7" path="res://scenes/inventory.tscn" id="4_lbeej"]
[ext_resource type="PackedScene" uid="uid://dkq1efvxpkd0g" path="res://scenes/status_window.tscn" id="5_f87wm"]
[ext_resource type="Texture2D" uid="uid://dw4lk3jwqk5a5" path="res://graphics/ui/Wenrexa Winter.png" id="6_51mqb"]
[ext_resource type="Texture2D" uid="uid://dwh4gkcbkn214" path="res://graphics/health_bar_progress.png" id="7_5xfqg"]
[ext_resource type="Texture2D" uid="uid://dxspdxxjccqli" path="res://graphics/ui/Wenrexa Armor 1 + Body.png" id="7_bldfv"]
[ext_resource type="Texture2D" uid="uid://dbqit0bwh0v6q" path="res://graphics/health_bar.png" id="7_piwqu"]

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource("1_hcyje")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 108.0
offset_bottom = 40.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="StatusPortrait" parent="Control/HBoxContainer/VBoxContainer2" instance=ExtResource("2_nsu6t")]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HealthBar" parent="Control/HBoxContainer/VBoxContainer" instance=ExtResource("3_pk6e7")]
layout_mode = 2
value = 25.0
change_colors = true
safe_color = Color(0, 1, 0, 1)
mid_color = Color(1, 1, 0, 1)
danger_color = Color(1, 0, 0, 1)

[node name="StaminaBar" parent="Control/HBoxContainer/VBoxContainer" instance=ExtResource("3_pk6e7")]
layout_mode = 2
tint_under = Color(0.501961, 0.501961, 0.501961, 1)

[node name="MainProgress" parent="Control/HBoxContainer/VBoxContainer/StaminaBar" index="0"]
tint_progress = Color(1, 1, 0, 1)

[node name="ManaBar" parent="Control/HBoxContainer/VBoxContainer" instance=ExtResource("3_pk6e7")]
layout_mode = 2
tint_under = Color(0.501961, 0.501961, 0.501961, 1)

[node name="MainProgress" parent="Control/HBoxContainer/VBoxContainer/ManaBar" index="0"]
tint_progress = Color(0.145098, 0.380392, 1, 1)

[node name="Inventory" parent="Control" instance=ExtResource("4_lbeej")]
visible = false
layout_mode = 1

[node name="StatusWindow" parent="Control" instance=ExtResource("5_f87wm")]
visible = false
layout_mode = 1

[node name="EffectBars" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -58.0
offset_right = 74.0
offset_bottom = -8.0
grow_vertical = 0
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 1

[node name="StrengthEffect" type="HBoxContainer" parent="Control/EffectBars"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 2

[node name="TextureRect" type="TextureRect" parent="Control/EffectBars/StrengthEffect"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("3_42ddj")
stretch_mode = 5

[node name="StrengthBoostBar" type="TextureProgressBar" parent="Control/EffectBars/StrengthEffect"]
visible = false
custom_minimum_size = Vector2(48, 16)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
value = 50.0
nine_patch_stretch = true
texture_over = ExtResource("7_piwqu")
texture_progress = ExtResource("7_5xfqg")
tint_progress = Color(0.227451, 0.74902, 0.0666667, 1)

[node name="SpeedEffect" type="HBoxContainer" parent="Control/EffectBars"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 2

[node name="TextureRect" type="TextureRect" parent="Control/EffectBars/SpeedEffect"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("6_51mqb")
stretch_mode = 5

[node name="SpeedBoostBar" type="TextureProgressBar" parent="Control/EffectBars/SpeedEffect"]
visible = false
custom_minimum_size = Vector2(48, 16)
layout_mode = 2
mouse_filter = 2
value = 50.0
nine_patch_stretch = true
texture_over = ExtResource("7_piwqu")
texture_progress = ExtResource("7_5xfqg")
tint_progress = Color(0.14902, 0.333333, 1, 1)

[node name="ArmourEffect" type="HBoxContainer" parent="Control/EffectBars"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 2

[node name="TextureRect" type="TextureRect" parent="Control/EffectBars/ArmourEffect"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("7_bldfv")
stretch_mode = 5

[node name="ArmourBoostBar" type="TextureProgressBar" parent="Control/EffectBars/ArmourEffect"]
visible = false
custom_minimum_size = Vector2(48, 16)
layout_mode = 2
mouse_filter = 2
value = 100.0
nine_patch_stretch = true
texture_over = ExtResource("7_piwqu")
texture_progress = ExtResource("7_5xfqg")
tint_progress = Color(0.6, 0.239216, 0, 1)

[editable path="Control/HBoxContainer/VBoxContainer/HealthBar"]
[editable path="Control/HBoxContainer/VBoxContainer/StaminaBar"]
[editable path="Control/HBoxContainer/VBoxContainer/ManaBar"]
[editable path="Control/Inventory"]
[editable path="Control/Inventory/VBoxContainer/MarginContainer/Background/MarginContainer2/InventorySlots/InventorySlot12"]
